@@ -100,7 +100,6 @@ import Triangle.AbstractSyntaxTrees.LoopForFromToUntilDoCommand;
 
 public final class Encoder implements Visitor {
     // Nuevos agregado - Parte x
-    // TODO 
 
     // Commands
     public Object visitAssignCommand(AssignCommand ast, Object o) {
@@ -125,15 +124,14 @@ public final class Encoder implements Visitor {
     public Object visitIfCommand(IfCommand ast, Object o) {
         Frame frame = (Frame) o;
         int jumpifAddr, jumpAddr;
-
         Integer valSize = (Integer) ast.E.visit(this, frame);
         jumpifAddr = nextInstrAddr;
         emit(Machine.JUMPIFop, Machine.falseRep, Machine.CBr, 0);
         ast.C1.visit(this, frame);
         jumpAddr = nextInstrAddr;
-        emit(Machine.JUMPop, 0, Machine.CBr, 0);
+        emit(Machine.JUMPop, Machine.falseRep, Machine.CBr, 0);
         patch(jumpifAddr, nextInstrAddr);
-        ast.ROI1.visit(this, frame);
+        ast.ROI1.visit(this, frame); //Adentro está el comando que se hace cuando se termina el programa
         patch(jumpAddr, nextInstrAddr);
         return null;
     }
@@ -168,19 +166,49 @@ public final class Encoder implements Visitor {
         return null;
     }
 
-    /* CAMBIOS NUEVOS Parte 1 
-   * Autores: Joshua Arcia
+
+    /* CAMBIOS NUEVOS Parte 1
+     * Autores: Joshua Arcia
       -visitRestOfIfCommand
       -Modificación de if para que sea con rest of if
       -visitBarCommand
      */
     @Override
     public Object visitRestOfIfCommand(RestOfIf ast, Object o) {
+        //Frame frame = (Frame) o;
+        int  jumpAddr;
+
+        if (ast.BC1 != null)
+        {
+            ast.BC1.visit(this, o);
+        }
+            ast.C1.visit(this, o); // Comando del primer if
+            jumpAddr = nextInstrAddr;
+            emit(Machine.JUMPop, 0, Machine.CBr, 0);
+            patch(jumpAddr, nextInstrAddr);
         return null;
     }
 
     @Override
     public Object visitBarCommand(BarCommand ast, Object o) {
+        //Frame frame = (Frame) o;
+        int jumpifAddr, jumpAddr;
+
+        Integer valSize = (Integer) ast.E1.visit(this, o);
+        jumpifAddr = nextInstrAddr;
+        emit(Machine.JUMPIFop, Machine.falseRep, Machine.CBr, 0);
+
+        ast.C1.visit(this, o);
+        jumpAddr = nextInstrAddr;
+
+        emit(Machine.JUMPop, 0, Machine.CBr, 0);
+        if (ast.BC1 != null)
+        {
+            ast.BC1.visit(this, o);
+            patch(jumpAddr, nextInstrAddr);
+        }
+        patch(jumpifAddr, nextInstrAddr);
+        patch(jumpAddr, nextInstrAddr);
         return null;
     }
 
@@ -369,7 +397,7 @@ public final class Encoder implements Visitor {
     }
 
     public Object visitEmptyExpression(EmptyExpression ast, Object o) {
-        return new Integer(0);
+        return 0;
     }
 
     public Object visitIfExpression(IfExpression ast, Object o) {
@@ -432,7 +460,7 @@ public final class Encoder implements Visitor {
     // Declarations
     public Object visitBinaryOperatorDeclaration(BinaryOperatorDeclaration ast,
             Object o) {
-        return new Integer(0);
+        return Integer.valueOf(0);
     }
 
     public Object visitConstDeclaration(ConstDeclaration ast, Object o) {
@@ -453,7 +481,7 @@ public final class Encoder implements Visitor {
             extraSize = valSize;
         }
         writeTableDetails(ast);
-        return new Integer(extraSize);
+        return Integer.valueOf(extraSize);
     }
 
     public Object visitFuncDeclaration(FuncDeclaration ast, Object o) {
@@ -474,7 +502,7 @@ public final class Encoder implements Visitor {
         }
         emit(Machine.RETURNop, valSize, 0, argsSize);
         patch(jumpAddr, nextInstrAddr);
-        return new Integer(0);
+        return Integer.valueOf(0);
     }
 
     public Object visitProcDeclaration(ProcDeclaration ast, Object o) {
@@ -496,7 +524,7 @@ public final class Encoder implements Visitor {
         }
         emit(Machine.RETURNop, 0, 0, argsSize);
         patch(jumpAddr, nextInstrAddr);
-        return new Integer(0);
+        return Integer.valueOf(0);
     }
 
     public Object visitSequentialDeclaration(SequentialDeclaration ast, Object o) {
@@ -506,18 +534,18 @@ public final class Encoder implements Visitor {
         extraSize1 = ((Integer) ast.D1.visit(this, frame)).intValue();
         Frame frame1 = new Frame(frame, extraSize1);
         extraSize2 = ((Integer) ast.D2.visit(this, frame1)).intValue();
-        return new Integer(extraSize1 + extraSize2);
+        return Integer.valueOf(extraSize1 + extraSize2);
     }
 
     public Object visitTypeDeclaration(TypeDeclaration ast, Object o) {
         // just to ensure the type's representation is decided
         ast.T.visit(this, null);
-        return new Integer(0);
+        return Integer.valueOf(0);
     }
 
     public Object visitUnaryOperatorDeclaration(UnaryOperatorDeclaration ast,
             Object o) {
-        return new Integer(0);
+        return Integer.valueOf(0);
     }
 
     public Object visitVarDeclaration(VarDeclaration ast, Object o) {
@@ -528,7 +556,7 @@ public final class Encoder implements Visitor {
         emit(Machine.PUSHop, 0, 0, extraSize);
         ast.entity = new KnownAddress(Machine.addressSize, frame.level, frame.size);
         writeTableDetails(ast);
-        return new Integer(extraSize);
+        return Integer.valueOf(extraSize);
     }
 
     /* CAMBIOS NUEVOS Parte 1
@@ -540,7 +568,8 @@ public final class Encoder implements Visitor {
      */
     @Override
     public Object visitVarInitDeclaration(VarInitDeclaration ast, Object o) {
-        // Igual que var declaration? 
+        // Igual que var declaration?
+        // Probablemente jajaja
         // TODO
         Frame frame = (Frame) o;
         int extraSize;
@@ -549,7 +578,7 @@ public final class Encoder implements Visitor {
         emit(Machine.PUSHop, 0, 0, extraSize);
         ast.entity = new KnownAddress(Machine.addressSize, frame.level, frame.size);
         writeTableDetails(ast);
-        return new Integer(extraSize);
+        return extraSize;
     }
 
     @Override
@@ -591,7 +620,7 @@ public final class Encoder implements Visitor {
         int elemSize = ((Integer) ast.E.visit(this, frame)).intValue();
         Frame frame1 = new Frame(frame, elemSize);
         int arraySize = ((Integer) ast.AA.visit(this, frame1)).intValue();
-        return new Integer(elemSize + arraySize);
+        return Integer.valueOf(elemSize + arraySize);
     }
 
     public Object visitSingleArrayAggregate(SingleArrayAggregate ast, Object o) {
@@ -605,7 +634,7 @@ public final class Encoder implements Visitor {
         int fieldSize = ((Integer) ast.E.visit(this, frame)).intValue();
         Frame frame1 = new Frame(frame, fieldSize);
         int recordSize = ((Integer) ast.RA.visit(this, frame1)).intValue();
-        return new Integer(fieldSize + recordSize);
+        return Integer.valueOf(fieldSize + recordSize);
     }
 
     public Object visitSingleRecordAggregate(SingleRecordAggregate ast,
@@ -619,7 +648,7 @@ public final class Encoder implements Visitor {
         int valSize = ((Integer) ast.T.visit(this, null)).intValue();
         ast.entity = new UnknownValue(valSize, frame.level, -frame.size - valSize);
         writeTableDetails(ast);
-        return new Integer(valSize);
+        return Integer.valueOf(valSize);
     }
 
     public Object visitFuncFormalParameter(FuncFormalParameter ast, Object o) {
@@ -628,7 +657,7 @@ public final class Encoder implements Visitor {
         ast.entity = new UnknownRoutine(Machine.closureSize, frame.level,
                 -frame.size - argsSize);
         writeTableDetails(ast);
-        return new Integer(argsSize);
+        return Integer.valueOf(argsSize);
     }
 
     public Object visitProcFormalParameter(ProcFormalParameter ast, Object o) {
@@ -637,7 +666,7 @@ public final class Encoder implements Visitor {
         ast.entity = new UnknownRoutine(Machine.closureSize, frame.level,
                 -frame.size - argsSize);
         writeTableDetails(ast);
-        return new Integer(argsSize);
+        return Integer.valueOf(argsSize);
     }
 
     public Object visitVarFormalParameter(VarFormalParameter ast, Object o) {
@@ -646,12 +675,12 @@ public final class Encoder implements Visitor {
         ast.entity = new UnknownAddress(Machine.addressSize, frame.level,
                 -frame.size - Machine.addressSize);
         writeTableDetails(ast);
-        return new Integer(Machine.addressSize);
+        return Integer.valueOf(Machine.addressSize);
     }
 
     public Object visitEmptyFormalParameterSequence(
             EmptyFormalParameterSequence ast, Object o) {
-        return new Integer(0);
+        return Integer.valueOf(0);
     }
 
     public Object visitMultipleFormalParameterSequence(
@@ -660,7 +689,7 @@ public final class Encoder implements Visitor {
         int argsSize1 = ((Integer) ast.FPS.visit(this, frame)).intValue();
         Frame frame1 = new Frame(frame, argsSize1);
         int argsSize2 = ((Integer) ast.FP.visit(this, frame1)).intValue();
-        return new Integer(argsSize1 + argsSize2);
+        return Integer.valueOf(argsSize1 + argsSize2);
     }
 
     public Object visitSingleFormalParameterSequence(
@@ -690,7 +719,7 @@ public final class Encoder implements Visitor {
             emit(Machine.LOADAop, 0, Machine.SBr, 0);
             emit(Machine.LOADAop, 0, Machine.PBr, displacement);
         }
-        return new Integer(Machine.closureSize);
+        return Integer.valueOf(Machine.closureSize);
     }
 
     public Object visitProcActualParameter(ProcActualParameter ast, Object o) {
@@ -710,17 +739,17 @@ public final class Encoder implements Visitor {
             emit(Machine.LOADAop, 0, Machine.SBr, 0);
             emit(Machine.LOADAop, 0, Machine.PBr, displacement);
         }
-        return new Integer(Machine.closureSize);
+        return Integer.valueOf(Machine.closureSize);
     }
 
     public Object visitVarActualParameter(VarActualParameter ast, Object o) {
         encodeFetchAddress(ast.V, (Frame) o);
-        return new Integer(Machine.addressSize);
+        return Integer.valueOf(Machine.addressSize);
     }
 
     public Object visitEmptyActualParameterSequence(
             EmptyActualParameterSequence ast, Object o) {
-        return new Integer(0);
+        return Integer.valueOf(0);
     }
 
     public Object visitMultipleActualParameterSequence(
@@ -729,7 +758,7 @@ public final class Encoder implements Visitor {
         int argsSize1 = ((Integer) ast.AP.visit(this, frame)).intValue();
         Frame frame1 = new Frame(frame, argsSize1);
         int argsSize2 = ((Integer) ast.APS.visit(this, frame1)).intValue();
-        return new Integer(argsSize1 + argsSize2);
+        return Integer.valueOf(argsSize1 + argsSize2);
     }
 
     public Object visitSingleActualParameterSequence(
@@ -739,7 +768,7 @@ public final class Encoder implements Visitor {
 
     // Type Denoters
     public Object visitAnyTypeDenoter(AnyTypeDenoter ast, Object o) {
-        return new Integer(0);
+        return Integer.valueOf(0);
     }
 
     public Object visitArrayTypeDenoter(ArrayTypeDenoter ast, Object o) {
@@ -752,7 +781,7 @@ public final class Encoder implements Visitor {
         } else {
             typeSize = ast.entity.size;
         }
-        return new Integer(typeSize);
+        return Integer.valueOf(typeSize);
     }
 
     public Object visitBoolTypeDenoter(BoolTypeDenoter ast, Object o) {
@@ -760,7 +789,7 @@ public final class Encoder implements Visitor {
             ast.entity = new TypeRepresentation(Machine.booleanSize);
             writeTableDetails(ast);
         }
-        return new Integer(Machine.booleanSize);
+        return Integer.valueOf(Machine.booleanSize);
     }
 
     public Object visitCharTypeDenoter(CharTypeDenoter ast, Object o) {
@@ -768,16 +797,16 @@ public final class Encoder implements Visitor {
             ast.entity = new TypeRepresentation(Machine.characterSize);
             writeTableDetails(ast);
         }
-        return new Integer(Machine.characterSize);
+        return Integer.valueOf(Machine.characterSize);
     }
 
     public Object visitErrorTypeDenoter(ErrorTypeDenoter ast, Object o) {
-        return new Integer(0);
+        return Integer.valueOf(0);
     }
 
     public Object visitSimpleTypeDenoter(SimpleTypeDenoter ast,
             Object o) {
-        return new Integer(0);
+        return Integer.valueOf(0);
     }
 
     public Object visitIntTypeDenoter(IntTypeDenoter ast, Object o) {
@@ -785,19 +814,19 @@ public final class Encoder implements Visitor {
             ast.entity = new TypeRepresentation(Machine.integerSize);
             writeTableDetails(ast);
         }
-        return new Integer(Machine.integerSize);
+        return Integer.valueOf(Machine.integerSize);
     }
 
     public Object visitRecordTypeDenoter(RecordTypeDenoter ast, Object o) {
         int typeSize;
         if (ast.entity == null) {
-            typeSize = ((Integer) ast.FT.visit(this, new Integer(0))).intValue();
+            typeSize = ((Integer) ast.FT.visit(this, Integer.valueOf(0))).intValue();
             ast.entity = new TypeRepresentation(typeSize);
             writeTableDetails(ast);
         } else {
             typeSize = ast.entity.size;
         }
-        return new Integer(typeSize);
+        return Integer.valueOf(typeSize);
     }
 
     public Object visitMultipleFieldTypeDenoter(MultipleFieldTypeDenoter ast,
@@ -813,9 +842,9 @@ public final class Encoder implements Visitor {
             fieldSize = ast.entity.size;
         }
 
-        Integer offset1 = new Integer(offset + fieldSize);
+        Integer offset1 = Integer.valueOf(offset + fieldSize);
         int recSize = ((Integer) ast.FT.visit(this, offset1)).intValue();
-        return new Integer(fieldSize + recSize);
+        return Integer.valueOf(fieldSize + recSize);
     }
 
     public Object visitSingleFieldTypeDenoter(SingleFieldTypeDenoter ast,
@@ -831,7 +860,7 @@ public final class Encoder implements Visitor {
             fieldSize = ast.entity.size;
         }
 
-        return new Integer(fieldSize);
+        return Integer.valueOf(fieldSize);
     }
 
     // Literals, Identifiers and Operators
@@ -950,12 +979,12 @@ public final class Encoder implements Visitor {
         elaborateStdEnvironment();
     }
 
-    private ErrorReporter reporter;
+    private final ErrorReporter reporter;
 
     // Generates code to run a program.
     // showingTable is true iff entity description details
     // are to be displayed.
-    public final void encodeRun(Program theAST, boolean showingTable) {
+    public void encodeRun(Program theAST, boolean showingTable) {
         tableDetailsReqd = showingTable;
         //startCodeGeneration();
         theAST.visit(this, new Frame(0, 0));
@@ -963,11 +992,10 @@ public final class Encoder implements Visitor {
     }
 
     // Decides run-time representation of a standard constant.
-    private final void elaborateStdConst(Declaration constDeclaration,
-            int value) {
+    private void elaborateStdConst(Declaration constDeclaration,
+                                   int value) {
 
-        if (constDeclaration instanceof ConstDeclaration) {
-            ConstDeclaration decl = (ConstDeclaration) constDeclaration;
+        if (constDeclaration instanceof ConstDeclaration decl) {
             int typeSize = ((Integer) decl.E.type.visit(this, null)).intValue();
             decl.entity = new KnownValue(typeSize, value);
             writeTableDetails(constDeclaration);
@@ -975,25 +1003,25 @@ public final class Encoder implements Visitor {
     }
 
     // Decides run-time representation of a standard routine.
-    private final void elaborateStdPrimRoutine(Declaration routineDeclaration,
-            int routineOffset) {
+    private void elaborateStdPrimRoutine(Declaration routineDeclaration,
+                                         int routineOffset) {
         routineDeclaration.entity = new PrimitiveRoutine(Machine.closureSize, routineOffset);
         writeTableDetails(routineDeclaration);
     }
 
-    private final void elaborateStdEqRoutine(Declaration routineDeclaration,
-            int routineOffset) {
+    private void elaborateStdEqRoutine(Declaration routineDeclaration,
+                                       int routineOffset) {
         routineDeclaration.entity = new EqualityRoutine(Machine.closureSize, routineOffset);
         writeTableDetails(routineDeclaration);
     }
 
-    private final void elaborateStdRoutine(Declaration routineDeclaration,
-            int routineOffset) {
+    private void elaborateStdRoutine(Declaration routineDeclaration,
+                                     int routineOffset) {
         routineDeclaration.entity = new KnownRoutine(Machine.closureSize, 0, routineOffset);
         writeTableDetails(routineDeclaration);
     }
 
-    private final void elaborateStdEnvironment() {
+    private void elaborateStdEnvironment() {
         tableDetailsReqd = false;
         elaborateStdConst(StdEnvironment.falseDecl, Machine.falseRep);
         elaborateStdConst(StdEnvironment.trueDecl, Machine.trueRep);
